--- a/Homework04/index.html
+++ b/Homework04/index.html
@@ -14,17 +14,18 @@
     <body>
         <!-- <h1>My first internet shop</h1> -->
         <header class="page-header contaner clearfix">
-            <div class="logo">
-                mart    
-            </div>
-            <nav> 
+            <a class="logo" href="#">
+                <img src="img/LOGO7821.png" alt="Mart Logo" />
+            </a>
+            
+            <nav class="clearfix"> 
                 <ul class="site-navigation clearfix">
-                    <li class="site-navigation-item"><a href="#">home</a></li>
-                    <li class="site-navigation-item"><a href="#">about us</a></li>
-                    <li class="site-navigation-item"><a href="#">page</a></li>
-                    <li class="site-navigation-item"><a href="#">shop</a></li>
-                    <li class="site-navigation-item"><a href="#">blog</a></li>
-                    <li class="site-navigation-item"><a href="#">contact us</a></li>
+                    <li class="site-navigation-item"><a class="menu-link" href="#">home</a></li>
+                    <li class="site-navigation-item"><a class="menu-link" href="#">about us</a></li>
+                    <li class="site-navigation-item"><a class="menu-link" href="#">page</a></li>
+                    <li class="site-navigation-item"><a class="menu-link" href="#">shop</a></li>
+                    <li class="site-navigation-item"><a class="menu-link" href="#">blog</a></li>
+                    <li class="site-navigation-item"><a class="menu-link" href="#">contact us</a></li>
                 </ul>
             </nav>
         </header>
