--- a/Homework06/index.html
+++ b/Homework06/index.html
@@ -99,6 +99,7 @@
                     
                     <li class="team-list-item contaner">
                         <div class="overlay">
+                            <div class="team-list-item-icons-wrapper">
                                 <ul class="team-list-item-icons">
                                         <li>
                                             <a href="#" class="team-list-item-icon icon-facebook">
@@ -121,6 +122,7 @@
                                             </a>
                                         </li>                               
                                 </ul>
+                            </div>    
                         </div>
                         <div class="team-list-image-wrapper">
                             <img src="img/Team/Desiner380470.jpg" alt="Desiner" width="380" height="470" class="team-list-image">
