Changes in HW7 + Done HW8

--- a/Homework07/index.html
+++ b/Homework07/index.html
@@ -13,6 +13,8 @@
     </head>
 
     <body>
+
+    <div class="container-fluid container-fluid--header"> 
         <header class="page-header contaner">
             
             <nav class="menu-wrapper"> 
@@ -30,8 +32,10 @@
                 </ul>
             </nav>
         </header>
+    </div>    
         <!-- Main content>  -->
-        <main> 
+    <div class="container-fluid container-fluid--main">
+        <main>         
             <h1 class="visually-hidden">Web and Design Studio</h1>
             <!--Services-->
             <section class="services-wrapper contaner">
@@ -72,7 +76,7 @@
                         <span class="title-after">Proin iaculis purus consequat sem cure.</span>
                 </div>
 
-                <form action="#" class="contact-us-form contaner">
+                <form action="#" method="POST" class="contact-us-form contaner">
                     <ul class="contact-us-form-list">
                         <li class="contact-us-form-list-item">
                             <input class="mark" type="text" placeholder="YOU NAME*" name="name" id="1" autofocus required>
@@ -94,6 +98,6 @@
             </section>
 
         </main>
-    
+    </div>
     </body> 
 </html>
