Done 3time Logo Change name

--- a/Homework08/index.html
+++ b/Homework08/index.html
@@ -26,7 +26,7 @@
                 </ul>
                
                 <a class="logo" href="#">
-                    <img src="img/icons/URLAUBSGLÜCK18519.png" width="185" height="19" alt="URLAUBSGLUCK Logo"/>
+                    <img src="img/icons/URLAUBS18519.png" width="185" height="19" alt="URLAUBSGLUCK Logo"/>
                 </a>
                 
             </nav>
