--- a/Homework08/index.html
+++ b/Homework08/index.html
@@ -14,6 +14,8 @@
 
     <body>
 
+    <div class="container-fluid">
+
         <div class="background-wrapper">
         
         <header class="page-header contaner">
@@ -107,6 +109,7 @@
         </main>
 
         </div>
+    </div>
     
     </body> 
 </html>
