--- a/Homework07/index.html
+++ b/Homework07/index.html
@@ -67,10 +67,12 @@
                 </ul>
             </section>
 
+        </main>
+
             <!-- Contact us form-->
 
-            <section class="contact-us-form-wrapper"> 
-                <div class="image-overlay"></div>
+        <section class="contact-us-form-wrapper"> 
+            <div class="image-overlay contaner">
                 <div class="title-wrapper title-form"> 
                         <h2 class="title-main title-form">contact us</h2>
                         <span class="title-after">Proin iaculis purus consequat sem cure.</span>
@@ -94,10 +96,8 @@
         
                     <button type="submit" class="send">send message</button>
                 </form>
-
-            </section>
-
-        </main>
+            </div>
+        </section>
     </div>
     </body> 
 </html>
