HW10 - with SVG mistake

--- a/Homework10/index.html
+++ b/Homework10/index.html
@@ -111,9 +111,9 @@
                                 <ul class="team__icons">
                                     <li class="team__icon">
                                         <a href="#" class="team__link link icon-facebook">
-                                            <svg>
+                                            <!-- <svg>
                                                 <use href="img/socials/symbol-defs.svg#icon-facebbok1326"></use>
-                                            </svg>
+                                            </svg> -->
                                             <span class="visually-hidden">Facebook</span>
                                         </a>
                                     </li>
